<resources>
    <string name="app_name">Stock Room</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="no_products_message">No products in inventory</string>
    <string name="add_products_message">Add products by pressing the button</string>
    <string name="title_add_stock">Add Stock Entry</string>
    <string name="title_edit_stock">Edit Stock Entry</string>
    <string name="action_delete">Delete</string>
    <string name="image_source_dialog">Select image from gallery or capture with camera</string>
    <string name="gallery_dialog_button">Gallery</string>
    <string name="camera_dialog_button">Camera</string>
    <string name="gallery_intent_title">Select image</string>
    <string name="empty_fields_toast">One or more fields are empty, enter all product information</string>
    <string name="incorrect_email_toast">Supplier email is incorrectly formatted</string>
    <string name="error_insert_entry_toast">Error adding the stock entry</string>
    <string name="insert_success_toast">Stock entry saved</string>
    <string name="update_error_toast">Error updating stock entry</string>
    <string name="update_success_toast">Stock entry updated</string>
    <string name="quanity_field_empty_toast">Quantity field is empty, please insert a number</string>
    <string name="no_negative_quantity_toast">Quantity cannot be lower than 0</string>
    <string name="invalid_email_address_toast">Invalid email address</string>
    <string name="no_name_toast">Product name is required to order</string>
    <string name="email_intent_subject">Order request, product:</string>
    <string name="delete_dialog_title">Attention</string>
    <string name="delete_dialog_message">Deleting is permanent, are you sure?</string>
    <string name="delete_dialog_delete">Delete</string>
    <string name="delete_success_toast">Stock entry deleted</string>
    <string name="delete_error_toast">Error deleting stock entry</string>
    <string name="delete_dialog_keep">Keep</string>
    <string name="perms_required_toast">Permissions are required to select and an image</string>
    <string name="discard_dialog_title">Wait!</string>
    <string name="discard_dialog_message">There are unsaved changes, would you like to save?</string>
    <string name="discard_dialog_keep">Keep Editing</string>
    <string name="discard_dialog_save">Save</string>
    <string name="discard_dialog_discard">Discard</string>
    <string name="loader_failed_toast">Error retrieving stock entry</string>
    <string name="stock_zero_toast">This product is out of stock</string>
    <string name="product_overview">Product Overview</string>
    <string name="name_hint">Name</string>
    <string name="touch_image_to_replace">Touch image to replace</string>
    <string name="price">Price</string>
    <string name="minus">-</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="order">Order</string>
    <string name="price_text">Price:</string>
    <string name="quantity_text">Quantity:</string>
    <string name="sale_button">Sale</string>
</resources>
